fix logo height on small screens

--- a/app/styles/apps/menu/_menu.scss
+++ b/app/styles/apps/menu/_menu.scss
@@ -62,7 +62,7 @@ nav.nav .nav-viewport{
       font-size: 4.9em;
       text-align: left;
       @media (max-width: $screen-sm-min){
-      margin-top:-3px;
+      margin-top:0px;
       }
     }
   }
